--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,7 +7,7 @@
 body {
     color: $color-fg;
     background: $color-bg;
-    font-family: 'PT Sans', ;
+    font-family: 'InconsolataLGCRegular', ;
     font-size: 100%;
     font-weight: 400;
 }
