--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,9 @@
     {% endif %}
 
     <link rel="icon" href="/assets/img/favicon.png">
-    <link href='https://fonts.googleapis.com/css?family=PT Sans:400,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/inconsolata-lgc" type="text/css"/>
+    <!-- <link href='https://fonts.googleapis.com/css?family=PT Sans:400,700' rel='stylesheet' type='text/css'>
+    -->
     <link rel="stylesheet" type="text/css" href="/assets/css/main.css">
 </head>
 
