--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
     {% endif %}
 
     <link rel="icon" href="/assets/img/favicon.png">
-    <link rel="stylesheet" href="https://fontlibrary.org/face/inconsolata-lgc:400,700" type="text/css"/>
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/inconsolata-lgc:400,700" type="text/css"/>
     <!-- <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/inconsolata-lgc" type="text/css"/>
     <link href='https://fonts.googleapis.com/css?family=PT Sans:400,700' rel='stylesheet' type='text/css'>
     -->
