--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -87,12 +87,13 @@ ul {
     }
 }
 
+/*
 @media only screen and (max-width: 640px) {
     .portfolio {
         display: none;
     }
 }
- 
+ */
 
 
 .blog {
