--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,10 +20,10 @@
     {% endif %}
 
     <link rel="icon" href="/assets/img/favicon.png">
+    <!--
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/inconsolata-lgc" type="text/css"/>
-    <!-- <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/inconsolata-lgc" type="text/css"/>
-    <link href='https://fonts.googleapis.com/css?family=PT Sans:400,700' rel='stylesheet' type='text/css'>
     -->
+    <link rel="stylesheet" media="screen" href="https://fonts.googleapis.com/css?family=Rubik" type="text/css"/>
     <link rel="stylesheet" type="text/css" href="/assets/css/main.css">
 </head>
 
