--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
     <!--
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/inconsolata-lgc" type="text/css"/>
     -->
-    <link rel="stylesheet" media="screen" href="https://fonts.googleapis.com/css?family=Rubik" type="text/css"/>
+    <link rel="stylesheet" media="screen" href="https://fonts.googleapis.com/css?family=Ubuntu+Mono" type="text/css"/>
     <link rel="stylesheet" type="text/css" href="/assets/css/main.css">
 </head>
 
