--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,7 +7,7 @@
 body {
     color: $color-fg;
     background: $color-bg;
-    font-family: 'Ubuntu Mono', monospace;
+    font-family: 'Fira Mono', monospace;
     font-size: 90%;
     font-weight: 400;
 }
