--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -94,16 +94,17 @@ ul {
     }
 }
 
-
-
-
-.blog {
+.friend {
     padding-bottom: 30px;
     h1 {
         font-size: 1.4em;
         margin-bottom: 5px;
     }
 }
+
+
+
+
 
 
 .post {
