--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -102,6 +102,13 @@ ul {
     }
 }
 
+.blog {
+    padding-bottom: 30px;
+    h1 {
+        font-size: 1.4em;
+        margin-bottom: 5px;
+    }
+}
 
 
 
