--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,9 +7,9 @@
 body {
     color: $color-fg;
     background: $color-bg;
-    font-family: 'PT+Mono', monospace;
-    font-size: 90%;
-    font-weight: 400;
+    font-family: 'Fira Mono', monospace;
+    font-size: 100%;
+    font-weight: 350;
 }
 h1 {
     margin-bottom: 5px;
