--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -8,8 +8,8 @@ body {
     color: $color-fg;
     background: $color-bg;
     font-family: 'Fira Mono', monospace;
-    font-size: 100%;
-    font-weight: 350;
+    font-size: 90%;
+    font-weight: normal;
 }
 h1 {
     margin-bottom: 5px;
