--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 
-
 <head>
+    {% gtm head %}
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
@@ -28,7 +28,7 @@
 </head>
 
 <body>
-
+    {% gtm body %} 
     <div class="wrapper">
         {{ content }}
     </div>
